Sistema de login OK

--- a/telaInicial.ui
+++ b/telaInicial.ui
@@ -79,7 +79,7 @@ border-color: black;
      </font>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="botaoConsultas">
