--- a/telaLogin.ui
+++ b/telaLogin.ui
@@ -21,7 +21,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>220</y>
+      <y>260</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -33,8 +33,8 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(98, 255, 208);
-border-radius: 5px;
+     <string notr="true">border-radius: 5px;
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(132, 255, 0, 255), stop:1 rgba(0, 223, 104, 255));
 border-style: outset;
 border-width: 1px;
 border-color: black;
@@ -48,7 +48,7 @@ border-color: black;
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>220</y>
+      <y>260</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -89,7 +89,7 @@ border-width: 1px;
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>250</y>
+      <y>290</y>
       <width>113</width>
       <height>20</height>
      </rect>
@@ -142,7 +142,7 @@ border-width: 1px;
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>60</y>
+      <y>100</y>
       <width>271</width>
       <height>151</height>
      </rect>
@@ -161,13 +161,13 @@ border-width: 1px;
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>280</y>
+      <y>320</y>
       <width>151</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>TextLabel</string>
+     <string/>
     </property>
    </widget>
    <zorder>logoLoCar</zorder>
