--- a/telaLogin.ui
+++ b/telaLogin.ui
@@ -32,12 +32,23 @@
       <pointsize>14</pointsize>
      </font>
     </property>
+    <property name="cursor">
+     <cursorShape>PointingHandCursor</cursorShape>
+    </property>
     <property name="styleSheet">
-     <string notr="true">border-radius: 5px;
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(132, 255, 0, 255), stop:1 rgba(0, 223, 104, 255));
+     <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 255, 255, 255), stop:1 rgba(165, 165, 165, 255));
 border-style: outset;
 border-width: 1px;
 border-color: black;
+border-radius: 5px;
+}
+
+QPushButton:hover{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(19, 226, 4, 255), stop:1 rgba(148, 209, 6, 255));
+}
+
+
 </string>
     </property>
     <property name="text">
