--- a/telaCadastroUsuario.ui
+++ b/telaCadastroUsuario.ui
@@ -107,7 +107,7 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0.943182,
    <widget class="QPushButton" name="btVoltar">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>30</x>
       <y>410</y>
       <width>91</width>
       <height>31</height>
@@ -153,10 +153,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(227, 227, 227);
-border-radius: 5px;
-border-style: outset;
-border-width: 1px;
-border-color: black;</string>
+</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -167,15 +164,21 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbNomeFuncionario">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>70</y>
        <width>291</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);
-</string>
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Nome</string>
@@ -184,14 +187,21 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbLoginFuncionario">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>110</y>
        <width>113</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Login</string>
@@ -200,17 +210,24 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbSenhaFuncionario">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>150</y>
        <width>113</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Senha</string>
@@ -219,17 +236,24 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbMatriculaFuncionario">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>190</y>
        <width>113</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Matricula</string>
@@ -238,8 +262,8 @@ border-color: black;</string>
     <widget class="QPushButton" name="btCadastrarFuncionario">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>240</y>
+       <x>460</x>
+       <y>230</y>
        <width>111</width>
        <height>41</height>
       </rect>
@@ -269,6 +293,90 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
       <string>Cadastrar</string>
      </property>
     </widget>
+    <widget class="QLabel" name="labelNomeFuncionario">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>70</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Nome</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelLoginFuncionario">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>110</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Login</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelSenhaFuncionario">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>150</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Senha</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelSenhaFuncionario_2">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>190</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Matricula</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frameCadCliente">
     <property name="geometry">
@@ -281,10 +389,7 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(227, 227, 227);
-border-radius: 5px;
-border-style: outset;
-border-width: 1px;
-border-color: black;</string>
+</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -295,15 +400,21 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbNomeCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>40</y>
+       <x>110</x>
+       <y>39</y>
        <width>291</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);
-</string>
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Nome</string>
@@ -312,14 +423,21 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbLoginCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>100</y>
        <width>113</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Login</string>
@@ -328,17 +446,24 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbSenhaCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>130</y>
        <width>113</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Senha</string>
@@ -347,17 +472,24 @@ border-color: black;</string>
     <widget class="QLineEdit" name="tbCPFCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>160</y>
-       <width>113</width>
-       <height>20</height>
+       <width>181</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>CPF</string>
@@ -366,8 +498,8 @@ border-color: black;</string>
     <widget class="QPushButton" name="btCadastrarCliente">
      <property name="geometry">
       <rect>
-       <x>250</x>
-       <y>240</y>
+       <x>460</x>
+       <y>230</y>
        <width>111</width>
        <height>41</height>
       </rect>
@@ -400,17 +532,24 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     <widget class="QLineEdit" name="tbCNHCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>190</y>
-       <width>113</width>
-       <height>20</height>
+       <width>171</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>CNH</string>
@@ -419,17 +558,24 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     <widget class="QLineEdit" name="tbNCartaoCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>220</y>
-       <width>113</width>
-       <height>20</height>
+       <width>211</width>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>nº Cartão</string>
@@ -438,17 +584,24 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     <widget class="QLineEdit" name="tbTelefoneCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>250</y>
-       <width>111</width>
+       <width>141</width>
        <height>20</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="text">
       <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
      <property name="placeholderText">
       <string>Telefone</string>
@@ -457,20 +610,195 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
     <widget class="QLineEdit" name="tbEnderecoCliente">
      <property name="geometry">
       <rect>
-       <x>60</x>
+       <x>110</x>
        <y>70</y>
        <width>291</width>
-       <height>20</height>
+       <height>21</height>
       </rect>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(255, 255, 255);</string>
+      <string notr="true">background-color: rgb(255, 255, 255);
+border-radius: 5px;
+border-style: outset;
+border-width: 1px;
+border-color: black;</string>
      </property>
      <property name="text">
       <string/>
      </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
      <property name="placeholderText">
       <string>Endereço</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelNomeCliente">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>40</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Nome</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelEnderecoCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>70</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Endereço</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelLoginCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>100</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Login</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelSenhaCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>130</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Senha</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelCPFCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>160</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>CPF</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelCNHCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>190</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>CNH</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelNCartaoCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>220</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>nº Cartão</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelTelefoneCliente">
+     <property name="geometry">
+      <rect>
+       <x>40</x>
+       <y>250</y>
+       <width>61</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>nº Cartão</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </widget>
