--- a/telaConsultaUsuario.ui
+++ b/telaConsultaUsuario.ui
@@ -73,7 +73,7 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0.943182,
    <widget class="QPushButton" name="btVoltar">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>20</x>
       <y>410</y>
       <width>91</width>
       <height>31</height>
@@ -168,7 +168,7 @@ border-color: black;</string>
      <property name="geometry">
       <rect>
        <x>80</x>
-       <y>80</y>
+       <y>130</y>
        <width>291</width>
        <height>31</height>
       </rect>
@@ -178,36 +178,6 @@ border-color: black;</string>
      </property>
      <property name="placeholderText">
       <string>CPF do cliente</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btConsultar_2">
-     <property name="geometry">
-      <rect>
-       <x>390</x>
-       <y>80</y>
-       <width>141</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton{
-background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(165, 165, 165, 255), stop:1 rgba(255, 255, 255, 255));
-border-radius: 5px;
-border-style: outset;
-border-width: 1px;
-border-color: black;
-}
-QPushButton:hover{
-background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0.943182, stop:0 rgba(255, 126, 248, 255), stop:1 rgba(119, 146, 220, 255));
-}</string>
-     </property>
-     <property name="text">
-      <string>Consultar</string>
      </property>
     </widget>
    </widget>
@@ -222,10 +192,7 @@ background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:0.943182,
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(227, 227, 227);
-border-radius: 5px;
-border-style: outset;
-border-width: 1px;
-border-color: black;</string>
+</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -237,7 +204,7 @@ border-color: black;</string>
      <property name="geometry">
       <rect>
        <x>80</x>
-       <y>80</y>
+       <y>136</y>
        <width>291</width>
        <height>31</height>
       </rect>
@@ -249,11 +216,11 @@ border-color: black;</string>
       <string>Matricula do Funcionário</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="btConsultar">
+    <widget class="QPushButton" name="btConsultarFuncionario">
      <property name="geometry">
       <rect>
        <x>390</x>
-       <y>80</y>
+       <y>136</y>
        <width>141</width>
        <height>31</height>
       </rect>
@@ -284,11 +251,46 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
      </property>
     </widget>
    </widget>
+   <widget class="QPushButton" name="btConsultarCliente">
+    <property name="geometry">
+     <rect>
+      <x>410</x>
+      <y>230</y>
+      <width>141</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(255, 255, 255, 255), stop:1 rgba(165, 165, 165, 255));
+border-style: outset;
+border-width: 1px;
+border-color: black;
+border-radius: 5px;
+}
+
+QPushButton:hover{
+background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(19, 226, 4, 255), stop:1 rgba(148, 209, 6, 255));
+}
+
+
+</string>
+    </property>
+    <property name="text">
+     <string>Consultar</string>
+    </property>
+   </widget>
    <zorder>logoLoCarPequeno</zorder>
    <zorder>botaoCadastros</zorder>
    <zorder>btVoltar</zorder>
    <zorder>botaoCadastros_2</zorder>
    <zorder>frameConCliente</zorder>
+   <zorder>btConsultarCliente</zorder>
    <zorder>frameConFuncionario</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
