--- a/telas/telaConsultaReserva.ui
+++ b/telas/telaConsultaReserva.ui
@@ -222,6 +222,9 @@ border-color: black;</string>
      <property name="styleSheet">
       <string notr="true">background-color: rgb(255, 255, 255);</string>
      </property>
+     <property name="textElideMode">
+      <enum>Qt::ElideRight</enum>
+     </property>
      <column>
       <property name="text">
        <string>Cliente</string>
