--- a/telas/telaCadastroReserva.ui
+++ b/telas/telaCadastroReserva.ui
@@ -420,7 +420,7 @@ border-color: black;</string>
       <rect>
        <x>100</x>
        <y>180</y>
-       <width>401</width>
+       <width>61</width>
        <height>41</height>
       </rect>
      </property>
@@ -471,6 +471,27 @@ background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgb
      </property>
      <property name="text">
       <string>Cadastrar</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="labelTotal">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>180</y>
+       <width>201</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
    </widget>
